# go-c8y-cli

./: .gitignore  .goreleaser.yml  CHANGELOG.md  INSTALL_PACKAGE.md  LICENSE  Makefile  Proposals.md  README.md  Taskfile.yml  appveyor.yml  go.mod  go.sum  main.go
.devcontainer/: Dockerfile  devcontainer.json  install-powershell.sh
.github/workflows/: main.yml  publish-linux-packages.yml  release.yml
api/spec/: schema.json
cmd/c8y/: main.go
cmd/gen-docs/: main.go
cmd/gen-tests/: main.go
docker/: README.md  bash.dockerfile  profile.ps1  pwsh.dockerfile  pwsh2.dockerfile  shell.dockerfile  zsh.dockerfile
docs/: CNAME  Gemfile  _config.yml  index.html  index.md  search.html
docs-next/go-c8y-cli/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
docs/_c8y/: _index.md
docs/_docs/: 1-bash-installation.md  1-docker-usage.md  1-powershell-installation.md  1-powershell-prerequisites.md  2-getting-started-bash.md  2-getting-started-powershell.md  2-getting-started-shell.md  bash-aliases.md
docs/_includes/: c8y_menu.html  cookie-consent.html  google.html  header.html  navbar_items.html  powershell_current_category.html  (+1 more)
examples/: settings.json
scripts/: build-cli-tests.sh  generate-spec.ps1  generate-spec.sh  get_branch.sh  publish-docker.sh  setup.sh
tests/: config.manual.yaml  config.yaml  mocks.yaml  run-auto.sh  run-manual.sh  run.sh
tests/integration/: conftest.py  pyproject.toml
tests/integration/measurements/: test_measurements.py
tests/integration/utils/: command.py
tools/: publish-packages.sh  session.schema.json
(+4948 files in other folders)
